--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,16 +29,16 @@ website:
         menu:
           - text: Source Code
             url:  https://github.com/daniela-palleschi/daniela-palleschi.github.io/
-  sidebar:
-    style: "docked"
-    search: true
-    contents:
-      - index.qmd
-      - section: "Resources"
-        contents:
-          - pages/resources.qmd
-          - href: https://daniela-palleschi.github.io/workflow/
-            text: Workflow
+  # sidebar:
+  #   style: "docked"
+  #   search: true
+  #   contents:
+  #     - index.qmd
+  #     - section: "Resources"
+  #       contents:
+  #         - pages/resources.qmd
+  #         - href: https://daniela-palleschi.github.io/workflow/
+  #           text: Workflow
 format:
   html:
     theme:
